changed working experience

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>I am a software developer working at Genese Software Solution, Durbarthok Marga, Newroad, Pokhara, Nepal. I have over 3 years of working experience.</p>
+					<p>I am a software developer working currently at Genese Solution. I have over 5 years of working experience.</p>
 				</div>
 				<a href="#contact" class="button style2 down anchored">Next</a>
 			</section>
